test/core/errors/array_types_error/zs/implicit_array_with_auto_array_behind_error.zs
package implicit_array_with_auto_array_behind_error;

struct StructWithImplicit
{
    implicit uint32 array[];
};

struct ImplicitArrayWithAutoArrayBehindError
{
    StructWithImplicit structWithImplicit;
    uint32 array[]; // auto array needs to store size!
};
